@@ -1,3 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST cmdln-1.1.2.zip 87467 RMD160 b8f3abfd53934624a95db61e1dcb617e548e0977 SHA1 dd14514380039f17bbfca0818f17923113386488 SHA256 e6d2fc16557b8a4b9d2b7576769af54fbb72854ff5887ff00159e3f62690d583
 EBUILD cmdln-1.1.2.ebuild 527 RMD160 85184941566a8710b1e417a667d56d7fc1938df4 SHA1 a4414b7107df59bc87763faca59e322a894d7727 SHA256 ca9f98040293921a0df5f5f7083ca081a997631f9aa41c81d8ce70df8cf02e43
-MISC ChangeLog 195 RMD160 f292bf7a9bfde9451eb51af45bfe0b35d56cf259 SHA1 3766466e44a1fd38aaa12bf7164c5840d7938177 SHA256 788cec36e8bdf24da2f32fef063620627238ba580ab6c97cbb528f5183aad732
+MISC ChangeLog 293 RMD160 2741027738c54ee01c5cf65589d10ca1dcd4fcd1 SHA1 fdb20e33503652623894943dded5602832514781 SHA256 2bf5c44ba1f0f7089cd253d510b8c012c39a5d8fa51b0f960c4868d46a442637
+MISC metadata.xml 785 RMD160 f11f1f2293a6ffe936f23702028c900b3978f835 SHA1 cea1e92f9097795e93a6635bdc22fd5250c73c88 SHA256 bb520dd2956e968dc75ca5aa9094d92c9f3faebcf1e65d119ae70e15358d22e0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFKlC0MQW+hXSf0t0IRAvHuAKCFaVy6YsCXOnirp9vmN3Bk2JqrjQCglfdy
+tHdgbbwzKl68KPXoZwWae0I=
+=OtF0
+-----END PGP SIGNATURE-----
